# origami-engine

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: bench.yml  test.yml
docs/: Cargo.toml
origami-engine/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
origami-engine/benches/: origami.rs
origami-engine/src/: lib.rs
origami-engine/tests/: all.rs  try.rs
origami-engine/tests/trybuild/fail/: should_fail_when_html_esape_is_disabled_and_escape_is_used.rs  should_fail_when_html_esape_is_disabled_and_escape_is_used.stderr  should_fail_when_html_esape_is_disabled_and_noescape_is_used.rs  should_fail_when_html_esape_is_disabled_and_noescape_is_used.stderr  should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_comp_call.rs  should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_comp_call.stderr  should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_expr.rs  should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_expr.stderr  should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_literal.rs  should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_literal.stderr  should_fail_when_html_escape_is_enabled_and_escape_is_used_in_script_tag.rs  should_fail_when_html_escape_is_enabled_and_escape_is_used_in_script_tag.stderr  should_fail_when_html_escape_is_enabled_and_escape_is_used_in_style_tag.rs  should_fail_when_html_escape_is_enabled_and_escape_is_used_in_style_tag.stderr  should_fail_when_html_escape_is_enabled_and_noescape_is_used_in_script_tag.rs  should_fail_when_html_escape_is_enabled_and_noescape_is_used_in_script_tag.stderr  should_fail_when_html_escape_is_enabled_and_noescape_is_used_in_style_tag.rs  should_fail_when_html_escape_is_enabled_and_noescape_is_used_in_style_tag.stderr  should_fail_when_minify_html_is_disabled_and_nominify_is_used.rs  should_fail_when_minify_html_is_disabled_and_nominify_is_used.stderr  should_fail_when_minify_html_is_enabled_and_is_used_in_non_script_or_style_tag.rs  should_fail_when_minify_html_is_enabled_and_is_used_in_non_script_or_style_tag.stderr
origami-macros/: CHANGELOG.md  Cargo.toml  README.md
origami-macros/src/: lib.rs  utils.rs
origami-macros/src/anon/: mod.rs
origami-macros/src/anon/children/: attributes.rs  mod.rs
origami-macros/src/comp/: mod.rs
origami-macros/src/origami/: attributes.rs  children.rs  mod.rs
origami-macros/src/origami/children/: attributes.rs  mod.rs
