[package]
name = "origami-engine"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A templating engine for rust"
license = "MIT"
repository = "https://github.com/ratnaraj7/origami-engine"
keywords = ["templates", "engine", "markup", "html", "web"]
categories = ["template-engine"]

[dependencies]
origami-macros = { path = "../origami-macros", version = "0.1.0-alpha.1", default-features = false }
html-escape = { version = "0.2.13", optional = true }

[features]
default = ["html_escape"]
axum = ["origami-macros/axum"]
html_escape = ["origami-macros/html_escape", "dep:html-escape"]

[dev-dependencies]
axum = "0.7.5"
trybuild = "1.0.99"
