[package]
name = "origami-engine"
version = "0.1.3-alpha.3"
edition = "2021"
description = "A templating engine for rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ratnaraj7/origami-engine"
keywords = ["templates", "engine", "markup", "html", "web"]
categories = ["template-engine"]

[dependencies]
origami-macros = { path = "../origami-macros", version = "0.1.0-alpha.5", default-features = false }
html-escape = { version = "0.2.13", optional = true }
minify-html = { version = "0.15.0", optional = true }
axum = { version = "0.7.6", optional = true }

[features]
default = ["html_escape", "minify_html"]
axum = ["dep:axum"]
html_escape = ["origami-macros/html_escape", "dep:html-escape"]
minify_html = ["origami-macros/minify_html", "dep:minify-html"]

[dev-dependencies]
axum = "0.7.5"
criterion = "0.5.1"
trybuild = "1.0.99"

[[bench]]
name = "origami"
harness = false
