[package]
name = "origami-macros"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Macros for origami-engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ratnaraj7/origami-engine"

[lib]
proc-macro = true

[dependencies]
indexmap = "2.4.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["extra-traits", "full"] }

[features]
default = ["html_escape", "minify_html"]
html_escape = []
minify_html = []
